[package]
name        = "a6"
version     = "0.0.0"
authors     = ["Jeff Sharp <jeff.sharp@git>"]
description = "Tools for the Andromeda A6 Synthesizer"
homepage    = "https://github.com/sharpjs/a6-tools"
repository  = "https://github.com/sharpjs/a6-tools"
license     = "GPL-3.0"
publish     = false

